<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <EditText
        android:id="@+id/editTextListDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextListName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/dialog_create_list_editText_list_description" />

    <EditText
        android:id="@+id/editTextListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButtonSave"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/dialog_create_list_editText_list_name" />

    <ImageButton
        android:id="@+id/imageButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/imageButtonDelete"
        android:contentDescription="@string/activity_task_imageButton_save"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/imageButtonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/activity_task_imageButton_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextListDescription"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@+id/buttonGreen"
        android:background="@color/dialog_create_list_button_red" />

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextListDescription"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@+id/buttonBlue"
        android:background="@color/dialog_create_list_button_green" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextListDescription"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@+id/buttonPink"
        android:background="@color/dialog_create_list_button_blue" />

    <Button
        android:id="@+id/buttonYellow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextListDescription"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@color/dialog_create_list_button_yellow" />

    <Button
        android:id="@+id/buttonOrange"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextListDescription"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@+id/buttonYellow"
        android:background="@color/dialog_create_list_button_orange" />

    <Button
        android:id="@+id/buttonPink"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextListDescription"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@+id/buttonOrange"
        android:background="@color/dialog_create_list_button_pink" />

</RelativeLayout>